# simple_contract_checker

./: .env.example  .gitignore  README.md  app.py  crew-add.sh  crew-governance.md  install-crew-governance.sh  pyproject.toml  qa-spec-postgres-persistence.md
controllers/: analyze_controller.py
core/: config.py
models/: schemas.py
services/: analyzer_service.py  parser_service.py
